--- a/zerotohero/css/style.css
+++ b/zerotohero/css/style.css
@@ -1,5 +1,8 @@
 body {
   background: linear-gradient(to bottom, red, yellow);
+  font-size: 2em;
+  text-align: justify;
+  font-family: 'Roboto', sans-serif;
 }
 
 #title {
@@ -12,12 +15,83 @@ body {
 
 #service-image {
   height: 400px;
-  width: 70%;
+  width: 70vw;
 
+  background: radial-gradient(circle, red 20%, green 30%, blue 50%);
+  border: 1in double green;
+}
+
+.link {
+  text-decoration: line-through;
 }
 
 
+#about-us-image {
+  height: 300px;
+  width: 60%;
 
+  border: 10px solid green;
+  padding: 20px 30px 0px 50px;
+  margin: 80px 30px;
+}
+
+.site-table {
+}
+
+
+.container {
+  background: rgb(250, 250, 250);
+  margin: 10px;
+  height: 300px;
+  width: 80%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.container-item {
+  background: rgb(36, 130, 39);
+  color: white;
+  font-size: 25px;
+  text-align: center;
+
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 100px;
+
+  width: 100px;
+  line-height: 50px;
+  margin:10px;
+}
+
+
+.grid-container {
+  background-color: rgb(250, 250, 250);
+  margin: 10px;
+  height: 500px;
+
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto;
+  grid-gap: 80px 300px;
+  /*justify-content: space-evenly;
+  align-content: space-between;
+  */
+
+}
+
+.grid-item {
+  color: black;
+  font-size: 25px;
+  text-align: center;
+
+  width: 100px;
+  line-height: 40px;
+  margin: 10px;
+}
 
 
 
