--- a/zerotohero/css/style.css
+++ b/zerotohero/css/style.css
@@ -94,6 +94,71 @@ body {
 }
 
 
+.submit-button {
+  margin: 20px 10px;
+  padding: 10px 15px;
+  border: none;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color: white;
+  background: rgb(89, 150, 255);
+  transform: translate(120px, 50%)
+
+}
+
+
+.submit-button:hover {
+  color: black;
+  background: rgb(147, 187, 255);
+  padding: 2in 2in;
+  font-family: serif;
+}
+
+
+#about-me {
+  animation-name: red-to-black;
+  animation-duration: 10s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+
+}
+
+@keyframes red-to-black {
+
+  0% {
+    background: red;
+    transform: translate(0px, 0px);
+  }
+
+  50% {
+    background: yellow;
+    transform: translate(20px, 20px);
+  }
+
+  100% {
+    background: black;
+    transform: translate(40px, 40px);
+  }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
